--- a/vue_three/src/assets/style.css
+++ b/vue_three/src/assets/style.css
@@ -47,3 +47,12 @@ section.ecommerce-section {
     /* box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); */
     cursor: pointer;
 }
+
+.hero .lead {
+    font-size: 52px;
+    font-weight: 600;
+}
+
+.hero .lead-smaller {
+    font-size: 20px;
+}
