--- a/vue_three/src/assets/skeletons.css
+++ b/vue_three/src/assets/skeletons.css
@@ -8,6 +8,7 @@
 .loading-skeleton li,
 .loading-skeleton .btn,
 .loading-skeleton label,
+.loading-skeleton nav,
 .loading-skeleton .form-control {
   color: transparent;
   appearance: none;
@@ -15,6 +16,7 @@
   background-color: #eee;
   border-color: #eee;
 }
+
 .loading-skeleton h1::placeholder,
 .loading-skeleton h2::placeholder,
 .loading-skeleton h3::placeholder,
@@ -25,6 +27,7 @@
 .loading-skeleton li::placeholder,
 .loading-skeleton .btn::placeholder,
 .loading-skeleton label::placeholder,
+.loading-skeleton nav::placeholder,
 .loading-skeleton .form-control::placeholder {
   color: transparent;
 }
@@ -46,4 +49,19 @@
 
 .loading-skeleton img {
   filter: grayscale(100) contrast(0%) brightness(1.8);
+}
+
+.loading-skeleton h1,
+.loading-skeleton h2, 
+.loading-skeleton h3, 
+.loading-skeleton h4, 
+.loading-skeleton h5, 
+.loading-skeleton h6, 
+.loading-skeleton p,
+.loading-skeleton span {
+  height: 15px;
+}
+
+.loading-skeleton nav {
+  height: 54px;
 }
