--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1,5 +1,5 @@
 html, body, * {
-    font-family: 'Montserrat', 'Roboto', sans-serif;
+    font-family: Montserrat, Roboto, sans-serif;
     scroll-behavior: smooth;
     /* font-weight: 300; */
 }
