--- a/templates/base.html
+++ b/templates/base.html
@@ -1,85 +1,187 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="{{ LANGUAGE_CODE }}">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-        <title>{% block title %}{% endblock %}</title>
-
-        <!-- META -->
-        <meta name="author" content="{% block author %}{% endblock %}" />
-
-        <meta name="theme-color" content="{% block theme_color %}{% endblock %}"/>
-        <meta name="description" content="{% block description %}{% endblock %}">
+        <meta name="theme-color" content="{% block theme_color %}#2d2d2d{% endblock %}"/>
         
-        <meta name="twitter:card" content="{% block twitter_card %}{% endblock %}" />
-        <meta name="twitter:site" content="{% block twitter_handle %}{% endblock %}" />
-        <meta name="twitter:creator" content="" />
+        <title>{% block title %}{% endblock %} | Ecommerce</title>
 
-        <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicons/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicons/favicon-16x16.png' %}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicons/apple-touch-icon.png' %}">
+        <link rel="manifest" href="{% static 'favicons/site.webmanifest' %}">
+        <link rel="canonical" href="{{ request.build_absolute_uri }}">
+
+        {% block structured_data %}{% endblock %}
+        
+        <meta name="author" content="{% block author %}{% endblock %}" />
+        <meta name="description" content="{% block description %}{% endblock %}">
+        <meta property="keywords" content="{% block meta_keywords %}{% endblock %}">
+        
+        <meta itemprop="name" content="{% block itemprop_name %}{% endblock %} | Gency313">
+        <meta itemprop="description" content="{% block itemprop_description %}Gency313 permet au petite et moyenne entreprises d'atteindre leur potentiel de croissance en facilitant les processus d'acquisition client{% endblock %}">
+        <meta itemprop="image" content="{% static 'hero/hero5.webp' %}">
+        
         <meta property="og:type" content="website" />
         <meta property="og:title" content="{% block og_title %}{% endblock %}" />        
         <meta property="og:description" content="{% block og_description %}{% endblock %}" />
-        <meta property="og:image" content="{% block og_image %}{% endblock %}" />            
+        <meta property="og:site_name" content="{% block og_site_name %}{% endblock %}">
+        <meta property="og:url" content="{{ request.build_absolute_uri }}">
+        <meta property="og:image" content="{% block og_image %}{% endblock %}">
+        <meta property="og:image:alt" content="Des clients qui travaillent avec Gency313" />
+        <meta property="og:image:width" content="{% block og_image_width %}1208{% endblock %}">
+        <meta property="og:image:height" content="{% block og_image_height %}630{% endblock %}">
 
-        <meta property="og:image:type" content="image/jpeg" />
-        <meta property="og:image:height" content="1200">
-        <meta property="og:image:width" content="800">
-        <meta property="og:image:alt" content="{% block og_image_alt %}{% endblock %}" />
+        <meta name="twitter:card" content="{% block twitter_card %}{% endblock %}" />
+        <meta name="twitter:site" content="{% block twitter_handle %}{% endblock %}" />
+        <meta name="twitter:creator" content="" />
+        <meta property="twitter:title" content="Agence marketing et acquisition client">
+        <meta property="twitter:description" content="Gency313 permet au petite et moyenne entreprises d'atteindre leur potentiel de croissance en facilitant les processus d'acquisition client">
+        <meta property="twitter:image" content="{% static 'hero/hero5.webp' %}">
 
-        <meta property="keywords" content="{% block meta_keywords %}{% endblock %}">
+        <meta name="robots" content="{% block robots %}follow,index{% endblock %}">
 
         {% block extra_metatags %}{% endblock %}
-        
-        <!-- Structured -->
-        {% block structured_data %}
-            {# {% include "scripts/seo/organization.html" %} #}
-        {% endblock %}
 
-        <!-- Font Awesomee -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         {# {% include "project_components/font_awesome_kit.html" with name="" %} #}
-
+        <!-- Font Awesomee -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-                
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <!-- MD Bootstrap -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.css" rel="stylesheet">
-
-        <!-- Custom CSS -->
-        {% block extra_css %}{% endblock %}
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet">
+        <!-- Custom -->
+        {% block style %}{% endblock %}
 
         <link rel="alternate" href="mywebsite.fr" hreflang="fr-fr" />
 
-        <script>window.dataLayer = window.dataLayer || []</script>
-        {% block datalayer_push %}{% endblock %}
+        <script>
+            window.dataLayer = window.dataLayer || []
+        </script>
         
+        <!-- Analytics -->
         {% block analytics %}{% endblock %}
+        {% block datalayer %}{% endblock %}
     </head>
     
     <body class="{% block body_color %}{% endblock %}">
-        {% block extra_analytics %}{% endblock %}
+        {% block no_scripts %}{% endblock %}
         
         <div id="app">
+            <!-- Header -->
+            {% block header %}{% endblock %}
             <!-- Navbar -->
             {% block navbar %}{% endblock %}
     
-            {% block main %}{% endblock %}
+            {% block main %}
+                <main>
+                    <!-- Main -->
+                    {% block main_content %}{% endblock %}
+                </main>
+            {% endblock %}
+
+            {% block page_body %}{% endblock %}
 
             <!-- Footer -->
             {% block footer %}{% endblock %}
         </div>
+        
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- MD Bootstrap -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+        
+        <!-- Lodash -->
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
+        <!-- DayJS -->
+        <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+        
+        <!-- Lodash -->
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
-        <!-- Scripts -->
-        {# {% include "scripts/base.html" %} #}
+        <!-- Vuejs -->
+        {% if debug %}
+        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        {% else %}
+        <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+        {% endif %}
+        
+        <!-- Axios -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+        <!-- Store -->
+        <script src="https://unpkg.com/vuex@4"></script>
+        
+        <!-- Router -->
+        <script src="https://unpkg.com/vue-router@4"></script>
 
         {% block extra_scripts %}{% endblock %}
 
         {% block vuejs_scripts %}{% endblock %}
+        
+        <!-- <script>
+            const { createRouter, createWebHistory } = VueRouter
+            const router = createRouter({
+                history: createWebHistory(),
+                routes: []
+            })
+        </script> -->
+
+        <script>
+            axios.defaults.headers.common['Accept-Language'] = '{{ LANGUAGE_CODE }},en-US;q=0.9'
+            axios.defaults.headers.common['Content-Type'] = 'application/json'
+            axios.defaults.headers.common['X-CSRFToken'] = '{{ csrf_token }}'
+
+            const client = axios.create({
+                baseURL: '{% if debug %}http://127.0.0.1:8000{% else %}http://web.fr{% endif %}',
+                timeout: 5000,
+                withCredentials: true
+            })
+        </script>
+        
+        {% block vuejs_app %}
+            <script>
+                const { createApp, ref, provide, inject } = Vue
+
+                const app = createApp({
+                    name: 'App',
+                    delimiters: ['[[', ']]'],
+                    setup () {
+                        const darkMode = ref(false)
+                        provide('darkMode', darkMode)
+                        return {
+                            darkMode
+                        }
+                    },
+                    // TODO: For testing only
+                    data () {
+                        return {
+                        }
+                    },
+                    methods: {
+                    }
+                })
+
+                // app.use(router)
+
+                // app.use((app) => {
+                //     app.config.globalProperties.http = axios
+                // })
+            </script>
+
+            {% block vuejs_components %}{% endblock %}
+            
+            <script>
+                app.config.globalProperties.$http = client
+                app.config.compilerOptions.delimiters = ["[[", "]]"]
+                app.mount('#app')
+            </script>
+        {% endblock %}
 
         <!-- Chat -->
         {% block chat %}{% endblock %}
