--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -1,35 +1,25 @@
 {% extends "base.html" %}
-{% load static %}
+{% load i18n static %}
 
 {% block theme_color %}#484848{% endblock %}
 
-{% comment %}
-{% block analytics %}
-    <!-- Clarity -->
-    {% clarity tag="40lq6t5uns" %}
-    <!-- Google Tag Manager -->
-    {# {% google_tag_manager "GTM-XXX" %} #}
-    <!-- Google Analytics -->
-    {# {% google_analytics "UA-XXX" "UA-XXX" %} #}
-    <!-- Facebook -->
-    {# {% facebook "343545345322423" %} #}
-
-    <!-- NEW GOOGLE ANALYTICS -->
-    {% google_analytics_4 "G-0D9SQRKB71" %}
-{% endblock %}    
-{% endcomment %}
-
-{% block extra_analytics %}
-    <!-- Google Optimize -->
-    {# {% google_optimize_anti_flicker "GTM-XXX" %} #}
-    <!-- Google Analytics -->
-    {# {% google_no_script "GTM-XXX" %} #}
-    <!-- Facebook Pixels -->
-    {% block facebook_event %}{% endblock %}
+{% block style %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">    
 {% endblock %}
 
-{% block main %}
+{% block header %}
+    <header class="fixed-top">
+        {% include "includes/top_navbar.html" %}
+        {% include "includes/navbar.html" %}
+    </header>
+{% endblock %}
+
+{% block main_content %}
     <div class="container mt-5">
         {% block container %}{% endblock %}
     </div>
+{% endblock %}
+
+{% block footer %}
+    {% include "includes/footer.html" %}
 {% endblock %}
