--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item">
-          <a href class="nav-link">
+          <a id="link-cart" href="{% url 'cart:list' %}" class="nav-link" aria-label="Cart">
             <i class="fa-solid fa-cart-shopping"></i>
           </a>
         </li>
