--- a/frontend_store/src/style.css
+++ b/frontend_store/src/style.css
@@ -9,7 +9,7 @@
 } */
 
 * {
-  font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Ruda", Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 html {
