Improve products page

--- a/shop_store/src/style.css
+++ b/shop_store/src/style.css
@@ -53,3 +53,13 @@
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+
+.space-section-1 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.space-section-2 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
