--- a/frontend_nuxt/assets/style.scss
+++ b/frontend_nuxt/assets/style.scss
@@ -1,3 +1,10 @@
+$base_section_margin: 8rem;
+$factors: (
+  3,
+  2,
+  1
+);
+
 .page-enter-active,
 .page-leave-active {
   transition: all 0.095s;
@@ -7,4 +14,13 @@
 .page-leave-to {
   opacity: 0;
   filter: blur(1rem);
+}
+
+/* Section */
+
+@each $factor in $factors {
+  .section-margin-#{$factor} {
+    margin-top: calc($base_section_margin / $factor);
+    margin-bottom: calc($base_section_margin / $factor);
+  }
 }
