Use typescript with Quasar

--- a/frontend_nuxt/assets/style.scss
+++ b/frontend_nuxt/assets/style.scss
@@ -1,9 +1,15 @@
-$base_section_margin: 8rem;
+$base_section_margin: 8%;
 $factors: (
-  3,
-  2,
-  1
+  1: 5,
+  2: 4,
+  3: 3,
+  4: 2,
+  5: 1
 );
+
+* {
+  font-family: "Noto Sans", "Ubuntu", "Roboto", "Lato", sans-serif;
+}
 
 .page-enter-active,
 .page-leave-active {
@@ -18,10 +24,10 @@ $factors: (
 
 /* Section */
 
-@each $factor in $factors {
-  .section-margin-#{$factor} {
-    margin-top: calc($base_section_margin / $factor);
-    margin-bottom: calc($base_section_margin / $factor);
+@each $key, $factor in $factors {
+  .section-margin-#{$key} {
+    margin-top: calc($base_section_margin / $factor + 155px);
+    // margin-bottom: calc($base_section_margin / $factor);
   }
 }
 
