Improve home page

--- a/mystore/templates/base.html
+++ b/mystore/templates/base.html
@@ -65,6 +65,8 @@
         <!-- Analytics -->
         {% block analytics %}{% endblock %}
         {% block datalayer %}{% endblock %}
+
+        {% block head_scripts %}{% endblock %}
     </head>
     
     <body class="{% block body_color %}{% endblock %}">
