--- a/mystore/static/style.css
+++ b/mystore/static/style.css
@@ -1,7 +1,7 @@
 html,
 body,
 * {
-    font-family: Oswald, Raleway, Roboto, sans-serif;
+    font-family: "Noto Sans", Roboto, Raleway, Oswald, sans-serif;
     scroll-behavior: smooth;
 }
 
