--- a/frontend_mobile/src/theme/variables.scss
+++ b/frontend_mobile/src/theme/variables.scss
@@ -1,7 +1,7 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
 
-:root {
+/* :root {
     --base-font: "Roboto";
     --base-shadow: box-shadow: 0 2px 6px -1px rgba(var(--mdb-box-shadow-color-rgb), 0.07), 0 6px 18px -1px rgba(var(--mdb-box-shadow-color-rgb), 0.04) !important;
     --mdb-body-color: #4f4f4f;
@@ -22,6 +22,10 @@ http://ionicframework.com/docs/theming/ */
 
 .shadow-5 {
     box-shadow: 0 2px 25px -5px rgba(var(--mdb-box-shadow-color-rgb), 0.07), 0 25px 21px -5px rgba(var(--mdb-box-shadow-color-rgb), 0.04) !important;
+} */
+
+.fw-light {
+    font-weight: 300;
 }
 
 
