--- a/frontend_mobile/src/theme/variables.scss
+++ b/frontend_mobile/src/theme/variables.scss
@@ -1,6 +1,14 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
 
+:root {
+    --base-font: "Nunito Sans"
+}
+
+* {
+    font-family: var(--base-font), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* :root {
     --base-font: "Roboto";
     --base-shadow: box-shadow: 0 2px 6px -1px rgba(var(--mdb-box-shadow-color-rgb), 0.07), 0 6px 18px -1px rgba(var(--mdb-box-shadow-color-rgb), 0.04) !important;
@@ -26,6 +34,14 @@ http://ionicframework.com/docs/theming/ */
 
 .fw-light {
     font-weight: 300;
+}
+
+.fw-bold {
+    font-weight: 700;
+}
+
+.fw-bolder {
+    font-weight: 900;
 }
 
 
