--- a/mystore/templates/layouts/base_email.html
+++ b/mystore/templates/layouts/base_email.html
@@ -175,6 +175,7 @@
 </head>
 
 <body>
+    <!-- Format email: https://htmlemail.io/inline/ -->
     <table class="container" width="100%" cellpadding="0" cellspacing="0">
         <tr>
             <!-- Header -->
