--- a/mystore/templates/pages/home.html
+++ b/mystore/templates/pages/home.html
@@ -24,14 +24,14 @@
 {% endblock %}
 
 {% block container %}
-<div class="row mb-4">
+<div class="row my-4">
     <div class="col-auto ms-auto d-flex gap-2">
         <a href="{% url 'admin:index' %}" target="_blank" rel="noreferrer noopener" class="btn btn-secondary btn-rounded shadow-none">
             <i class="fas fa-cog me-1"></i>
             Admin
         </a>
 
-        <a href="{% url 'accounts:logout' %}" class="btn btn-dark btn-rounded shadow-none">
+        <a href="{% url 'admin:logout' %}" class="btn btn-dark btn-rounded shadow-none">
             <i class="fas fa-right-to-bracket me-1"></i>
             {% trans "Se déconnecter" %}
         </a>
