--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -36,6 +36,11 @@
     --sidebar-accent-foreground: oklch(0.205 0 0);
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
+    /* Custom */
+    --warning: oklch(0.784 0.215 79.6);
+    --warning-foreground: oklch(0.784 0.215 79.6);
+    --info: oklch(0.72 0.1003 222.06);
+    --info-foreground: oklch(0.72 0.1003 222.06);
 }
 
 .dark {
@@ -71,6 +76,11 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(0.269 0 0);
     --sidebar-ring: oklch(0.439 0 0);
+    /* Custom */
+    --warning: oklch(0.269 0 0);
+    --warning-foreground: oklch(0.985 0 0);
+    --info: oklch(0.269 0 0);
+    --info-foreground: oklch(0.985 0 0);
 }
 
 @theme inline {
