Refactor query process

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -4,8 +4,6 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-    --background: oklch(1 0 0);
-    --foreground: oklch(0.145 0 0);
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
@@ -42,6 +40,8 @@
     --warning-foreground: oklch(0.784 0.215 79.6);
     --info: oklch(0.72 0.1003 222.06);
     --info-foreground: oklch(0.72 0.1003 222.06);
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.145 0 0);
 }
 
 .dark {
@@ -121,6 +121,8 @@
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-ring: var(--sidebar-ring);
+    --animate-accordion-down: accordion-down 0.2s ease-out;
+    --animate-accordion-up: accordion-up 0.2s ease-out;
 }
 
 @layer base {
